# password_manager

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
browser-extension/: README.md  content.js  manifest.json  popup.html  popup.js
design-system/css/: app.css  design-system.css
design-system/js/: app.js  state.js  utils.js
password_manager/: __init__.py  config.py  exceptions.py
password_manager/api/: __init__.py  app.py  dependencies.py  routes.py  routes_io.py  routes_notas.py  schemas.py
password_manager/cli/: main.py
password_manager/crypto/: __init__.py  crypto_service.py
password_manager/frontend/: index.html
password_manager/frontend/css/: app.css  design-system.css  theme.css
password_manager/frontend/js/: api.js  app.js  prefs.js  state.js  utils.js
password_manager/frontend/static/js/: api.js  app.js  state.js
password_manager/models/: __init__.py  credencial.py  nota.py
password_manager/services/: __init__.py  notas_service.py  password_manager_service.py
password_manager/storage/: __init__.py  file_storage.py  interface.py
