[project]
name = "password-manager"
version = "0.1.0"
description = "Gerenciador de senhas seguro com criptografia Fernet"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
pm = "password_manager.cli.main:app"
pm-api = "password_manager.api.app:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["password_manager"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
