[project]
name = "password-manager"
version = "0.1.0"
description = "Gerenciador de senhas seguro com criptografia Fernet"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiofiles>=25.1.0",
]

[project.scripts]
pm = "password_manager.api.app:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["password_manager"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
